adding user id extraction capabilities and cleaning documentation for hackathon.